--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6 tm-flex-center-v tm-text-container tm-section-left">
                         <h2 class="tm-color-secondary mb-4">Lorem ipsum dolor site</h2>
-                        <p class="mb-4">Nullam erat dolor, ullamcorper et nisi nec, porta portitor nisi. Quisque lobortis sem ut facilisis
-                            mattis. Sed eu pellentesque sapien, a finibus eros. Nunc ut ultricies augue.</p>
+                        <p class="mb-4">Website coba coba M. Yoga</p>
                         <p class="mb-5">Mauris sagittis dui arcu, sed luctus metus faucibus nec. Sed vulputate ipsum massa, ut dapibus purus
                             volutpat vel. Interdum et malesuada fames ac ante.</p>
                         <p class="text-right mb-0">
